[package]
name = "ascii_sobel"
version = "0.1.0"
edition = "2021"

authors = ["Morten Andersson"]
description = "A Rust application that uses a framebuffer, applies a Sobel filter, and renders ASCII contouring using crossterm."
license = "MIT"
repository = "https://github.com/avataren/ascii_sobel"

[dependencies]
minifb = "0.27"
ncurses = "5.101.0"
lazy_static = "1.4.0"
